syntax = "proto3";

package pb;
import public "google/protobuf/empty.proto";
option go_package = "./pb";

service Article {
  rpc Publish(PublishReq) returns (PublishResp);
  rpc Articles(ArticlesReq) returns (ArticlesResp);
  rpc ArticleDelete(ArticleDeleteReq) returns (google.protobuf.Empty);
  rpc ArticleDetail(ArticleDetailReq) returns (ArticleDetailResp);
}
message PublishReq {
  int64 user_id = 1;
  string title = 2;
  string content = 3;
  string description = 4;
  string cover = 5;
}
message PublishResp {
  int64 article_id = 1;
}

message ArticlesReq {
  int64 user_id = 1;
  int64 cursor = 2;
  int64 page_size = 3;
  int32 sort_type = 4;
  int64 article_id = 5;
}
message ArticleItem {
  int64 id = 1;
  string title = 2;
  string content = 3;
  string description = 4;
  string cover = 5;
  int64 comment_count = 6;
  int64 like_count = 7;
  int64 publish_time = 8;
  int64 author_td = 9;
}
message ArticlesResp {
  repeated ArticleItem articles = 1;
  bool is_end = 2; // 是否结束
  int64 cursor = 3; // 按点赞排序,cursor是当前页面最后一条数据的点赞数
  int64 article_id = 4; // 文章id ,cursor相同去重
}

message ArticleDeleteReq {
  int64 user_id = 1;
  int64 article_id = 2;
}

message ArticleDetailReq {
  int64 article_id = 1;
}
message ArticleDetailResp {
  ArticleItem article = 1;
}